Remove DCHECK when initializing the TabUsageRecorder.

Instead, the operation is now a no-op.

BUG=689765

Review-Url: https://codereview.chromium.org/2757293004
Cr-Commit-Position: refs/heads/master@{#458177}

Former-commit-id: 8c804e2dc91d1deb5401ef5b3f79db97025998dc